--- a/Python-PIL/.vscode/settings.json
+++ b/Python-PIL/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Administrator\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "python.pythonPath": "/usr/bin/python",
     "python.linting.pylintEnabled": true
 }
